--- a/index.html
+++ b/index.html
@@ -32,15 +32,15 @@
 	<div class="handle"><a href="https://www.instagram.com/brileycjordanphotography/?__d=1%2F">@BRILEYCJORDANPHOTOGRAPHY</a></div>
 
 	<div class="instagram">
-		<img src="SeniorPhotos/CatherineDunn/HomeCatherine2.jpg" alt="Catherine Grad">
-		<img src="GradPhotos/AuburnGroupGrad/HomeAuburnGroup2.jpg" alt="Auburn Group Jersey">
-		<img src="JosephCarmichael/Joseph1.jpg" alt="Joseph">
-		<img src="GradPhotos/XandiDunn/HomeXandi.jpg" alt="Xandi">
-		<img src="SeniorPhotos/TatumCarmichael/HomeTatum.jpg" alt="Tatum">
+		<img src="SeniorPhotos/CatherineDunn/HomeCatherine2.JPG" alt="Catherine Grad">
+		<img src="GradPhotos/AuburnGroupGrad/HomeAuburnGroup2.JPG" alt="Auburn Group Jersey">
+		<img src="JosephCarmichael/Joseph1.JPG" alt="Joseph">
+		<img src="GradPhotos/XandiDunn/HomeXandi.JPG" alt="Xandi">
+		<img src="SeniorPhotos/TatumCarmichael/HomeTatum.JPG" alt="Tatum">
 		<img src="Allie/A3.jpg" alt="Allie">
-		<img src="GradPhotos/RileyBishop/HomeRiley.jpg" alt="Riley">
-		<img src="CouplePhotos/ReeceSheridan/HomeReeceSheridan.jpg" alt="Reece and Sheridan with Bottle">
-		<img src="CarmichaelFamily/Carmichael1.jpg" alt="Carmichael Family">
+		<img src="GradPhotos/RileyBishop/HomeRiley.JPG" alt="Riley">
+		<img src="CouplePhotos/ReeceSheridan/HomeReeceSheridan.JPG" alt="Reece and Sheridan with Bottle">
+		<img src="CarmichaelFamily/Carmichael1.JPG" alt="Carmichael Family">
 	</div>
 
 	<div class="footer">
