--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
 	<div class="header">
 		<img src="Logos/BlackLogo.png" alt="Black Logo">
-		<a href="Home.html">HOME</a>
+		<a href="index.html">HOME</a>
 		<a href="HTML/Portfolio.html">PORTFOLIO</a>
 		<a href="HTML/Galleries.html">GALLERIES</a>
 		<a href="HTML/About.html">ABOUT</a>
@@ -45,7 +45,7 @@
 	</div>
 
 	<div class="footer">
-		<a href="Home.html">HOME</a>
+		<a href="index.html">HOME</a>
 		<a href="HTML/Portfolio.html">PORTFOLIO</a>
 		<a href="HTML/Galleries.html">GALLERIES</a>
 		<a href="HTML/About.html">ABOUT</a>
